# microdos

./: .gitignore  CMakeLists.txt  README.md  unblock_scripts.ps1
MicroDOSPkg/: MicroDOSPkg.dec  MicroDOSPkg.dsc
MicroDOSPkg/MicroDOSApp/: Edk2Entry.cpp  MicroDOSApp.inf
MicroDOSPkg/MicroDOSApp/src/: main.cpp
MicroDOSPkg/MicroDOSApp/src/core/: string_view.hpp
MicroDOSPkg/MicroDOSApp/src/dos/: dos_services.hpp
MicroDOSPkg/MicroDOSApp/src/fs/: fat.cpp  fat.hpp
MicroDOSPkg/MicroDOSApp/src/shell/: shell.cpp  shell.hpp
MicroDOSPkg/MicroDOSApp/src/uefi/: console.cpp  console.hpp  file_system.cpp  file_system.hpp  uefi.hpp
boot/microboot/: efi_min.hpp  main.cpp
docs/: architecture.md  build-edk2.md  build.md  changelog-0.3-edk2.md  msdos-1.25-source-analysis.md  next-implementation-backlog.md  no-edk2-port.md  porting-plan.md  virtualbox.md
kernel/: kernel.cpp  kernel.hpp
kernel/boot/: boot_info.hpp
kernel/platform/console/: text_console.cpp  text_console.hpp
kernel/platform/framebuffer/: framebuffer.cpp  framebuffer.hpp
scripts/: build-edk2-linux.sh  build-edk2-windows.ps1  build-host-check.ps1  build-standalone-uefi.ps1  build-virtualbox-image.ps1  create-esp-layout.ps1  create-fat-esp.ps1  run-qemu.ps1  run-virtualbox.ps1
src/: main.cpp
src/core/: string_view.hpp
src/dos/: dos_services.hpp
src/fs/: fat.cpp  fat.hpp
src/shell/: shell.cpp  shell.hpp
src/uefi/: console.cpp  console.hpp  file_system.cpp  file_system.hpp  uefi.hpp
tools/: host_check.cpp
